<resources>
	<string name="app_name">TemperatureConverter</string>
	<string name="convert">Convert:</string>
	<string name="toCelsius">To Celsius</string>
	<string name="toFahrenheit">To Fahrenheit</string>
	<string name="toKelvin">To Kelvin</string>
	<string name="convertButton">Convert</string>
	<string name="roundCheck">Round to whole number</string>
	<string-array name="units">
		<item>ºC</item>
		<item>ºF</item>
		<item>K</item>
	</string-array>
</resources>