<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="io.elliotlewis.temperatureconverter.MainActivity">

	<TextView
		android:id="@+id/convertText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:labelFor="@+id/tempValue"
		android:text="@string/convert"/>

	<RelativeLayout
		android:id="@+id/inputBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@id/convertText">

		<Spinner
			android:id="@+id/spinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:entries="@array/units"
			/>

		<EditText
			android:id="@+id/tempValue"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_toStartOf="@id/spinner"
			android:ems="10"
			android:inputType="numberDecimal"/>
	</RelativeLayout>

	<RadioGroup
		android:id="@+id/radioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@id/inputBox"
		android:layout_marginBottom="8dp">

		<RadioButton
			android:id="@+id/toCelsius"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/toCelsius"/>

		<RadioButton
			android:id="@+id/toFahrenheit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/toFahrenheit"/>

		<RadioButton
			android:id="@+id/toKelvin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/toKelvin"/>
	</RadioGroup>

	<CheckBox
		android:id="@+id/roundCheck"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentStart="true"
		android:layout_below="@id/radioGroup"
		android:layout_marginBottom="8dp"
		android:text="@string/roundCheck"/>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/roundCheck"
		android:layout_centerHorizontal="true"
		android:onClick="convert"
		android:text="@string/convertButton"/>
</RelativeLayout>